# fastapi-lambda-integration

./: Dockerfile  README.md  docker_run.sh  main.py  pyproject.toml
