[tool.poetry]
name = "fastapi-lambda-integration"
version = "0.1.0"
description = ""
authors = ["NIKHIL KUMAR REDDY <nikhilkumar.m@skil.ai>"]

[tool.poetry.dependencies]
python = "^3.10"
mangum = "^0.19.0"
fastapi = {extras = ["all"], version = "^0.115.4"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
